feat: Game /options and database updated according new difficulty strategies and public /play updated and fixed
